--- a/package.json
+++ b/package.json
@@ -2,9 +2,24 @@
   "name": "api",
   "version": "1.0.0",
   "description": "API to send email notifications to the developer",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run clean && npm run build && npm run serve",
+    "build": "npm run build-ts",
+    "serve": "nodemon dist/server.js",
+    "watch-node": "nodemon dist/server.js",
+    "clean": "rimraf ./dist",
+    "watch": "concurrently --kill-others \"npm run watch-ts\" \"npm run watch-node\"",
+    "test": "jest --forceExit --coverage --verbose",
+    "watch-test": "npm run test -- --watchAll",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "build-sass": "node-sass src/public/css/main.scss dist/public/css/main.css",
+    "watch-sass": "node-sass -w src/public/css/main.scss dist/public/css/main.css",
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "copy-static-assets": "ts-node copyStaticAssets.ts",
+    "debug": "npm run build && npm run watch-debug",
+    "serve-debug": "nodemon --inspect dist/server.js",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "repository": {
     "type": "git",
@@ -18,5 +33,28 @@
   "bugs": {
     "url": "https://github.com/VISHNUMURTHY/nodejs/issues"
   },
-  "homepage": "https://github.com/VISHNUMURTHY/nodejs#readme"
+  "homepage": "https://github.com/VISHNUMURTHY/nodejs#readme",
+  "dependencies": {
+    "body-parser": "1.19.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
+    "mongoose": "^5.8.10",
+    "node-uuid": "^1.4.8",
+    "nodemailer": "^6.4.2",
+    "swagger-ui-express": "^4.1.3",
+    "sync-request": "^6.1.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/node": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.5.43",
+    "nodemon": "^2.0.2",
+    "typescript": "^3.7.5"
+  }
 }
