--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm run clean && npm run build && npm run serve",
     "build": "npm run build-ts",
-    "serve": "nodemon dist/server.js",
+    "serve": "nodemon dist/server.js prop=dev.ts",
     "watch-node": "nodemon dist/server.js",
     "clean": "rimraf ./dist",
     "watch": "concurrently --kill-others \"npm run watch-ts\" \"npm run watch-node\"",
@@ -19,7 +19,7 @@
     "copy-static-assets": "ts-node copyStaticAssets.ts",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
+    "watch-debug": "concurrently -k -p -n \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "repository": {
     "type": "git",
@@ -54,6 +54,7 @@
     "@babel/preset-env": "^7.8.3",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.43",
+    "concurrently": "^5.1.0",
     "nodemon": "^2.0.2",
     "typescript": "^3.7.5"
   }
